--- a/.github/workflows/reminders.yml
+++ b/.github/workflows/reminders.yml
@@ -1,14 +1,14 @@
-name: Task reminders
+# name: Task reminders
 
-on:
-  schedule:
-    - cron: "*/5 * * * *"
-  workflow_dispatch:
+# on:
+#   schedule:
+#     - cron: "0 18 * * *"
+#   workflow_dispatch: 
 
-jobs:
-  call-api:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Call reminder endpoint
-        run: |
-          curl -X POST https://tasly-backend.onrender.com/api/auth/check
+# jobs:
+#   call-api:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Call reminder endpoint
+#         run: |
+#           curl -X POST https://tasly-backend.onrender.com/api/auth/check
